--- a/index.html
+++ b/index.html
@@ -7,18 +7,11 @@
 </head>
 <body>
     <div class="container">
-       <div class="Item">Item 1</div>
-       <div class="Item">Item 2</div>
-       <div class="Item">Item 3</div>
-       <div class="Item">Item 4</div> 
-       <div class="Item">Item 1</div>
-       <div class="Item">Item 2</div>
-       <div class="Item">Item 3</div>
-       <div class="Item">Item 4</div>
-       <div class="Item">Item 1</div>
-       <div class="Item">Item 2</div>
-       <div class="Item">Item 3</div>
-       <div class="Item">Item 4</div> 
+       <div class="Item one">Item 1</div>
+       <div class="Item two">Item 2</div>
+       <div class="Item three">Item 3</div>
+       <div class="Item four">Item 4</div> 
+     
       
     </div>
 </body>
