--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="container">
        <div class="Item one">Item 1</div>
        <div class="Item two">Item 2</div>
-       <div class="Item three">Item 3</div>
+       <div class="Item thre">Item 3</div>
        <div class="Item four">Item 4</div> 
      
       
